--- a/src/main/resources/templates/Member/ListarMembers.html
+++ b/src/main/resources/templates/Member/ListarMembers.html
@@ -9,16 +9,17 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body>
-<div th:switch="${teams}" class="container my-5">
+<div th:switch="${members}" class="container my-5">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <div th:case="*">
-                <h2 class="my-5">Teams</h2>
+                <h2 class="my-5">Members</h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
                         <th>id</th>
-                        <th>Name</th>
+                        <th>Member</th>
+                        <th>Team</th>
                         <th>Create</th>
                         <th>UpDate</th>
                         <th>Edit</th>
@@ -26,21 +27,22 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:if="${teams.empty}"><td colspan="4" align="center">No team find</td></tr>
-                    <tr th:each="team : ${teams}">
-                        <td th:text="${team.id}"></td>
-                        <td th:text="${team.name}"></td>
-                        <td th:text="${team.createAt}"></td>
-                        <td th:text="${team.updateAt}"></td>
-                        <td><a th:href="@{/edit/{id}(id=${team.id})}" class="btn btn-primary"><i
+                    <tr th:if="${members.empty}">
+                        <td colspan="4" align="center">
+                    <tr th:each="member : ${members}">
+                        <td th:text="${member.id}"></td>
+                        <td th:text="${member.name}"></td>
+                        <td th:text="${member.createdAt}"></td>
+                        <td th:text="${member.updateAt}"></td>
+                        <td><a th:href="@{/member/editMember{id}(id=${member.id})}" class="btn btn-primary"><i
                                 class="fas fa-user-edit"></i></a></td>
-                        <td><a th:href="@{/delete/{id}(id=${team.id})}" class="btn btn-primary"><i
+                        <td><a th:href="@{/member/deleteMember/{id}(id=${member.id})}" class="btn btn-primary"><i
                                 class="fas fa-user-times"></i></a></td>
                     </tr>
                     </tbody>
                 </table>
+                <p class="my-5"><a th:href="@{/member/registerMember}" class="btn btn-primary"><i class="fas fa-user-plus"></i></a></p>
             </div>
-            <p class="my-5"><a href="/signup" class="btn btn-primary"><i class="fas fa-user-plus"></i></a></p>
         </div>
     </div>
 </div>
