--- a/src/main/resources/templates/Team/ListTeams.html
+++ b/src/main/resources/templates/Team/ListTeams.html
@@ -11,7 +11,7 @@
 <body>
 <div th:switch="${teams}" class="container my-5">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <div th:case="*">
                 <h2 class="my-5">Teams</h2>
                 <table class="table table-striped table-responsive-md">
@@ -26,19 +26,21 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:if="${teams.empty}"><td colspan="4" align="center"><button class="btn btn-primary" ><i class="fas fa-user-plus"></i></button></td></tr>
+                    <tr th:if="${teams.empty}">
+                        <td colspan="4" align="center">
                     <tr th:each="team : ${teams}">
                         <td th:text="${team.id}"></td>
                         <td th:text="${team.name}"></td>
-                        <td th:text="${team.createAt}"></td>
+                        <td th:text="${team.createdAt}"></td>
                         <td th:text="${team.updateAt}"></td>
-                        <td><a th:href="@{/edit/{id}(id=${team.id})}" class="btn btn-primary"><i
+                        <td><a th:href="@{/team/editTeam/{id}(id=${team.id})}" class="btn btn-primary"><i
                                 class="fas fa-user-edit"></i></a></td>
-                        <td><a th:href="@{/delete/{id}(id=${team.id})}" class="btn btn-primary"><i
+                        <td><a th:href="@{/team/deleteTeam/{id}(id=${team.id})}" class="btn btn-primary"><i
                                 class="fas fa-user-times"></i></a></td>
                     </tr>
                     </tbody>
                 </table>
+                <p class="my-5"><a th:href="@{/team/registerTeam}" class="btn btn-primary"><i class="fas fa-user-plus"></i></a></p>
             </div>
         </div>
     </div>
