--- a/src/main/resources/templates/Member/ListMembers.html
+++ b/src/main/resources/templates/Member/ListMembers.html
@@ -21,7 +21,7 @@
                         <th>Member</th>
                         <th>Team</th>
                         <th>Create</th>
-                        <th>UpDate</th>
+                        <th>Update</th>
                         <th>Edit</th>
                         <th>Delete</th>
                     </tr>
@@ -32,9 +32,10 @@
                     <tr th:each="member : ${members}">
                         <td th:text="${member.id}"></td>
                         <td th:text="${member.name}"></td>
+                        <td th:text="${member.team.name}"></td>
                         <td th:text="${member.createdAt}"></td>
                         <td th:text="${member.updateAt}"></td>
-                        <td><a th:href="@{/member/editMember{id}(id=${member.id})}" class="btn btn-primary"><i
+                        <td><a th:href="@{/member/editMember/{id}(id=${member.id})}" class="btn btn-primary"><i
                                 class="fas fa-user-edit"></i></a></td>
                         <td><a th:href="@{/member/deleteMember/{id}(id=${member.id})}" class="btn btn-primary"><i
                                 class="fas fa-user-times"></i></a></td>
