--- a/src/main/resources/templates/Member/RegisterMember.html
+++ b/src/main/resources/templates/Member/RegisterMember.html
@@ -21,9 +21,16 @@
                         <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="team" class="col-form-label">Team</label>
-                        <input type="text" th:field="*{team}" class="form-control" id="team" placeholder="Team">
-                        <span th:if="${#fields.hasErrors('team')}" th:errors="*{team}" class="text-danger"></span>
+                        <label for="teamSelect"s class="col-form-label">Team</label>
+                        <select class="form-control" id="teamSelect" th:field="*{team.id}">
+                            <option th:if="${teams.empty}">
+                                No teams registered!
+                            </option>
+                            <option th:each="team : ${teams}" th:value="${team.id}"
+                                    th:text="${team.name}" >
+                            </option>
+                        </select>
+                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="row">
