--- a/src/main/resources/templates/Team/UpdateTeam.html
+++ b/src/main/resources/templates/Team/UpdateTeam.html
@@ -13,7 +13,7 @@
     <h2 class="mb-5">Update Team</h2>
     <div class="row">
         <div class="col-md-6">
-            <form action="#" th:action="@{/team/updateTeam/{id2}(id2=${team.id})}" th:object="${team}" method="post">
+            <form action="#" th:action="@{/team/updateTeam/{id}(id=${team.id})}" th:object="${team}" method="post">
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label for="name" class="col-form-label">Name</label>
