--- a/src/main/resources/templates/Member/ListMembers.html
+++ b/src/main/resources/templates/Member/ListMembers.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Members</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-</head>
+<head th:replace="header :: header"></head>
 <body>
 <div th:switch="${members}" class="container my-5">
     <div class="row">
         <div class="col-md-12">
             <div th:case="*">
                 <h2 class="my-5">Members</h2>
+                <div>
+                    <form class="form-inline" th:action="@{/member/searchMember}" method="get">
+                        <div class="form-group mb-2">
+                            <select class="form-control mr-2" th:name="searchType">
+                                <option>Name</option>
+                                <option>Id</option>
+                                <option>Team</option>
+                            </select>
+                            <input th:name="searchTerm" type="text" class="form-control" id="search" placeholder="Search by...">
+                            <button type="submit" class="btn btn-primary mb-2 mr-2">Search</button>
+                        </div>
+                    </form>
+                </div>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
@@ -28,17 +34,18 @@
                     </thead>
                     <tbody>
                     <tr th:if="${members.empty}">
-                        <td colspan="4" align="center">
+                        <td colspan="4" align="center"> No member found! </td>
+                    </tr>
                     <tr th:each="member : ${members}">
                         <td th:text="${member.id}"></td>
                         <td th:text="${member.name}"></td>
                         <td th:text="${member.team.name}"></td>
-                        <td th:text="${member.createdAt}"></td>
-                        <td th:text="${member.updateAt}"></td>
+                        <td th:text="${#temporals.format(member.createdAt,'dd/MM/yyyy HH:mm:ss')}"></td>
+                        <td th:text="${#temporals.format(member.updateAt,'dd/MM/yyyy HH:mm:ss')}"></td>
                         <td><a th:href="@{/member/editMember/{id}(id=${member.id})}" class="btn btn-primary"><i
-                                class="fas fa-user-edit"></i></a></td>
+                                class="fas fa-edit"></i></a></td>
                         <td><a th:href="@{/member/deleteMember/{id}(id=${member.id})}" class="btn btn-primary"><i
-                                class="fas fa-user-times"></i></a></td>
+                                class="fas fa-trash-alt"></i></a></td>
                     </tr>
                     </tbody>
                 </table>
