--- a/src/main/resources/templates/Team/ListTeams.html
+++ b/src/main/resources/templates/Team/ListTeams.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Teams</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-</head>
+<head th:replace="header :: header"></head>
 <body>
 <div th:switch="${teams}" class="container my-5">
     <div class="row">
         <div class="col-md-12">
             <div th:case="*">
                 <h2 class="my-5">Teams</h2>
+                <div>
+                    <form class="form-inline" th:action="@{/team/searchTeam}" method="get">
+                        <div class="form-group mb-2">
+                            <select class="form-control mr-2" th:name="searchType">
+                                <option>Name</option>
+                                <option>Id</option>
+                            </select>
+                            <input th:name="searchTerm" type="text" class="form-control" id="search" placeholder="Search by...">
+                            <button type="submit" class="btn btn-primary mb-2 mr-2">Search</button>
+                        </div>
+                    </form>
+                </div>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
@@ -27,12 +32,13 @@
                     </thead>
                     <tbody>
                     <tr th:if="${teams.empty}">
-                        <td colspan="4" align="center">
+                        <td colspan="4" align="center">No team found! </td>
+                    </tr>
                     <tr th:each="team : ${teams}">
                         <td th:text="${team.id}"></td>
                         <td th:text="${team.name}"></td>
-                        <td th:text="${team.createdAt}"></td>
-                        <td th:text="${team.updateAt}"></td>
+                        <td th:text="${#temporals.format(team.createdAt,'dd/MM/yyyy HH:mm:ss')}"></td>
+                        <td th:text="${#temporals.format(team.updateAt,'dd/MM/yyyy HH:mm:ss')}"></td>
                         <td><a th:href="@{/team/editTeam/{id}(id=${team.id})}" class="btn btn-primary"><i
                                 class="fas fa-user-edit"></i></a></td>
                         <td><a th:href="@{/team/deleteTeam/{id}(id=${team.id})}" class="btn btn-primary"><i
