--- a/src/main/resources/templates/Member/ListMembers.html
+++ b/src/main/resources/templates/Member/ListMembers.html
@@ -6,24 +6,24 @@
     <div class="row">
         <div class="col-md-12">
             <div th:case="*">
-                <h2 class="my-5">Members</h2>
+                <h2 class="my-5" style="font-family:verdana; color:blue;">Member</h2>
                 <div>
                     <form class="form-inline" th:action="@{/member/searchMember}" method="get">
                         <div class="form-group mb-2">
-                            <select class="form-control mr-2" th:name="searchType">
+                            <select class="form-control mr-2" style="font-family:verdana; color:black;font-size:18px" th:name="searchType">
                                 <option>Name</option>
-                                <option>Id</option>
+                                <option>ID</option>
                                 <option>Team</option>
                             </select>
-                            <input th:name="searchTerm" type="text" class="form-control" id="search" placeholder="Search by...">
-                            <button type="submit" class="btn btn-primary mb-2 mr-2">Search</button>
+                            <input th:name="searchTerm" type="text" class="form-control" id="search" style="font-family:verdana;font-size:18px" placeholder="Search by...">
+                            <button type="submit" class="btn btn-primary ml-2" style="font-family:verdana;font-size:18px">Search</button>
                         </div>
                     </form>
                 </div>
-                <table class="table table-striped table-responsive-md">
+                <table class="table table-striped table-responsive-md" style="font-family:verdana; color:black;font-size:18px">
                     <thead>
                     <tr>
-                        <th>id</th>
+                        <th>ID</th>
                         <th>Member</th>
                         <th>Team</th>
                         <th>Create</th>
