--- a/src/main/resources/templates/Team/UpdateTeam.html
+++ b/src/main/resources/templates/Team/UpdateTeam.html
@@ -3,20 +3,20 @@
 <head th:replace="header :: header"></head>
 <body>
 <div class="container my-5">
-    <h2 class="mb-5">Update Team</h2>
+    <h2 class="mb-5" style="font-family:verdana; color:blue;">Update Team</h2>
     <div class="row">
         <div class="col-md-6">
             <form action="#" th:action="@{/team/updateTeam/{id}(id=${team.id})}" th:object="${team}" method="post">
                 <div class="row">
                     <div class="form-group col-md-6">
-                        <label for="name" class="col-form-label">Name</label>
-                        <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name">
+                        <label for="name" class="col-form-label" style="font-family:verdana; color:black; font-size:18px">Name</label>
+                        <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name" style="font-family:verdana;font-size:18px">
                         <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <input type="submit" class="btn btn-primary" value="Update">
+                        <input type="submit" class="btn btn-primary" style="font-family:verdana; font-size:18px" value="Update">
                     </div>
                 </div>
             </form>
