--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="header :: header"></head>
-
-<body>
+<head >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body style="background-color:lightblue;">
 <div class="row">
     <div class="col-md-12">
-        <h1 class="display-4">Bem-vindo!!!</h1>
+        <a href="/team/" type="button" class="btn btn-outline-info btn-lg btn-block" style="font-family:verdana; font-size:25px">TEAMS</a>
+        <a href="/member/" type="button" class="btn btn-outline-info btn-lg btn-block" style="font-family:verdana; font-size:25px">MEMBERS</a>
     </div>
 </div>
 </body>
